Display Mode Switch

--- a/css/bs.css
+++ b/css/bs.css
@@ -1,3 +1,35 @@
 h2{
     color: blue;
 }
+
+#MCE{
+    display: none;
+}
+
+#XE{
+    display: none;
+}
+
+#XD{
+    display: none;
+}
+
+#xA{
+    display: none;
+}
+
+#xB{
+    display: none;
+}
+
+#XA{
+    display: none;
+}
+
+#x{
+    display: none;
+}
+
+#XED{
+    display: none;
+}
