--- a/css/ie.css
+++ b/css/ie.css
@@ -1,3 +1,50 @@
 h2{
     color: red;
 }
+
+#but{
+    color: red;
+    width: 120px;
+    height: 50px;
+    background: black;
+}
+
+#tb{
+    display: none;
+}
+
+#xian{
+    display: none;
+}
+
+#cpu{
+    display: none;
+}
+
+#zhuban{
+    display: none;
+}
+
+#sanri{
+    display: none;
+}
+
+#memory{
+    display: none;
+}
+
+#ssd{
+    display: none;
+}
+
+#gpu{
+    display: none;
+}
+
+#W{
+    display: none;
+}
+
+#box{
+    display: none;
+}
